tests/snapshots/run_wpt_conformance__coreml_neg_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
neg.https.any.js neg int8 4D tensor, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported data type for neg: Int8

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    negInput: i8[1, 2, 2, 1];
  }

  nodes {
    [negOutput] = neg(negInput, label="");
  }

  outputs { negOutput; }
}
