tests/snapshots/run_wpt_conformance__coreml_notEqual_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
not_equal.https.any.js notEqual float16 0D scalar, coreml
 not_equal :: notEqual float16 0D scalar: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-0.62841796875]; inputB: [-4.41796875]
  expected output: [1]
  actual output: [0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[];
    inputB: f16[];
  }

  nodes {
    [output] = notEqual(inputA, inputB, label="");
  }

  outputs { output; }
}
